--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     <div class="page">
       <div class="container">
         <h1 class="text large">zachNet</h1>
-        <h2 class="text small">Welcome to my website!</h2>
-        <p class="text smaller"><a href="https://youtube.com/@zachNet">YouTube</a> | <a>Discord</a> | <a href="https://linktr.ee/dyide">dyide</a> | <a href="https://discord.gg/4GfxXZfU3U">Weather Ranch</a></p>
+        <h2 class="text small">Welcome to my splash page!</h2>
+		<h3 class="text smaller">Find me in all these cool places:
+        <p class="text smaller"><a href="https://youtube.com/@zachNet">YouTube</a> | <a href="https://discord.gg/hV2w5sZQxz">Discord</a> | <a href="https://linktr.ee/dyide">dyide</a></p>
       </div>
     </div>
   
